# haskell-demonstrations

./: LICENSE  README.md  haskell-demonstrations.cabal
src/: BigStack.hs  DependencyInjection.hs  FreeMock.hs  Main.hs  Missiles.hs  Robot.hs  Transformer.hs  TypeclassMock.hs
test/: Main.hs  Spec.hs
