name:                haskell-demonstrations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aztecrex/haskell-demonstrations#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           2017 Greg Wiley
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TypeclassMock
                     , FreeMock
                     , BigStack
                     , Missiles
                     , Robot
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , free
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck

  default-language:    Haskell2010

test-suite haskell-demonstrations-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , haskell-demonstrations
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/haskell-demonstrations

